[package]
name = "beerust"
version = "0.1.0"
authors = ["sakamura yosuke <yosuke_sakamura@waku-2.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
